--- a/ITManager/ITManager/Views/SearchView.xaml
+++ b/ITManager/ITManager/Views/SearchView.xaml
@@ -6,11 +6,13 @@
              mc:Ignorable="d"
              xmlns:prism="http://prismlibrary.com/"
              xmlns:a="clr-namespace:ITManager.AttachedProperties"
+             xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.Resources>
+            <BooleanToVisibilityConverter x:Key="VisibleIfTrueConverter" />
             <DataTemplate x:Key="DropDownItemTemplate" DataType="wpfApplication1:ItemSourceModel">
                 <CheckBox Content="{Binding Name}"
                               IsChecked="{Binding Path=IsChecked, Mode=TwoWay}"
@@ -47,27 +49,72 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal">
-            <StackPanel Margin="20 0 0 0">
-                <Label Content="Selected skills:" Margin="-5 0 0 0" FontSize="16"/>
-                <TextBlock Text="{Binding SelectedItemsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                       Margin="0 0 0 20"
-                       Width="300"
-                       TextWrapping="Wrap"/>
-                <StackPanel Orientation="Horizontal">
-                    <ComboBox ItemsSource="{Binding Skills}"
-                              ItemTemplate="{StaticResource ComboBoxTemplate}"
-                              Width="300"/>
+            <StackPanel Margin="20 20 0 0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="0">
+                        <syncfusion:ComboBoxAdv ItemsSource="{Binding Skills}"
+                                            SelectedItems="{Binding SelectedSkills}"
+                                            Background="White"
+                                            DisplayMemberPath="Name"
+                                            AllowMultiSelect="True"
+                                            DefaultText="..Choose skills.."
+                                            SelectedValueDelimiter=", "
+                                            Width="300"/>
+                        <Label      Width="130" 
+                                    HorizontalAlignment="Left"
+                                    Content="Advanced options" Foreground="Blue">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="PreviewMouseLeftButtonDown">
+                                    <i:InvokeCommandAction Command="{Binding OpenCloseOptions1}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </Label>
+                        <ListBox Visibility="{Binding Options1Open, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource VisibleIfTrueConverter}}"/>
+                        <syncfusion:ComboBoxAdv ItemsSource="{Binding Languages}"
+                                            SelectedItems="{Binding SelectedLanguages}"
+                                            Background="White"
+                                            DisplayMemberPath="Name"
+                                            AllowMultiSelect="True"
+                                            DefaultText="..Choose languages.."
+                                            SelectedValueDelimiter=", "
+                                                Margin="0 20 0 0"
+                                            Width="300"/>
+                        <Label Content="Advanced options" Foreground="Blue">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="PreviewMouseLeftButtonDown">
+                                    <i:InvokeCommandAction Command="{Binding OpenCloseOptions2}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </Label>
+                        <ListBox Visibility="{Binding Options2Open, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource VisibleIfTrueConverter}}"/>
+                        
+                        <syncfusion:ComboBoxAdv ItemsSource="{Binding Projects}"
+                                            SelectedItems="{Binding SelectedProjects}"
+                                            Background="White"
+                                            DisplayMemberPath="Name"
+                                            AllowMultiSelect="True"
+                                            DefaultText="..Choose projects.."
+                                            SelectedValueDelimiter=", "
+                                            Margin="0 20 0 0"
+                                            Width="300"/>
+                    </StackPanel>
                     <Button Content="Search"
+                            VerticalAlignment="Top"
+                            HorizontalAlignment="Left"
+                            Grid.Column="1"
                             Style="{StaticResource DefaultButtonStyle}"
                             Width="100" Height="30" Margin="20 0 0 0" 
-                            Command="{Binding SearchCommand}"
-                            VerticalAlignment="Bottom"/>
-                </StackPanel>
+                            Command="{Binding SearchCommand}"/>
+                </Grid>               
 
                 <StackPanel Orientation="Horizontal">
                     <TextBox Text="{Binding QueryDescription, UpdateSourceTrigger=PropertyChanged}"
                              a:UserRolesAttachedProperties.RequiredRoles="2"
-                             Width="150" Height="30" Margin="150 20 0 0"
+                             Width="300" Height="30" Margin="0 20 0 0"
                              VerticalAlignment="Bottom"/>
                     <Button Content="Save search query"
                             a:UserRolesAttachedProperties.RequiredRoles="2"
