--- a/ITManager/ITManager/Views/RegisterView.xaml
+++ b/ITManager/ITManager/Views/RegisterView.xaml
@@ -11,6 +11,41 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
+        <Grid.Resources>
+            <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource {x:Type TextBox}}">
+                <Setter Property="Validation.ErrorTemplate">
+                    <Setter.Value>
+                        <ControlTemplate>
+                            <Grid>
+                                <Border BorderBrush="#FFCB2E2E" BorderThickness="1" Background="#11FF0000" IsHitTestVisible="False" x:Name="errorBorder"/>
+                                <AdornedElementPlaceholder x:Name="placeholder" />
+                                <Popup AllowsTransparency="True" HorizontalAlignment="Right" HorizontalOffset="0" VerticalOffset="0" PopupAnimation="Fade" Placement="Right" 
+                                   PlacementTarget="{Binding ElementName=errorBorder}" IsOpen="{Binding ElementName=placeholder, Path=AdornedElement.IsFocused, Mode=OneWay}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Polygon  VerticalAlignment="Center" Points="0,4 4,0 4,8" Fill="#FFCB2E2E" Stretch="Fill" Stroke="#FFCB2E2E"
+                                      StrokeThickness="2" />
+                                        <Border Background="#FFCB2E2E" CornerRadius="4" Padding="4">
+                                            <TextBlock HorizontalAlignment="Center" Foreground="White" FontWeight="Bold" Margin="2,0,0,0"
+                                                   Text="{Binding ElementName=placeholder, Path=AdornedElement.ToolTip, Mode=OneWay}" />
+                                        </Border>
+                                    </StackPanel>
+                                </Popup>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Style.Triggers>
+                    <Trigger Property="Validation.HasError" Value="True">
+                        <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=(Validation.Errors)[0].ErrorContent}" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="250"/>
@@ -21,45 +56,50 @@
             <Label  Content="Registration" 
                     Style="{StaticResource DefaultLabelStyle}" 
                     HorizontalAlignment="Center"/>
-            <TextBox Controls:TextBoxHelper.Watermark="Login"
-                     Text="{Binding Login, UpdateSourceTrigger=PropertyChanged}"
+            <TextBox Controls:TextBoxHelper.Watermark="Login*"
+                     MaxLength="20"
+                     Text="{Binding Login, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                      Margin="0 20 0 0" Height="30" 
                      VerticalContentAlignment="Center"
                      Controls:TextBoxHelper.ClearTextButton="True"/>
-            <TextBox Controls:TextBoxHelper.Watermark="First Name"
-                     Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"
+            <TextBox Controls:TextBoxHelper.Watermark="First Name*"
+                     Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                      Margin="0 20 0 0" Height="30" 
+                     MaxLength="20"
                      VerticalContentAlignment="Center"
                      Controls:TextBoxHelper.ClearTextButton="True"/>
-            <TextBox Controls:TextBoxHelper.Watermark="Last Name"
-                     Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"
+            <TextBox Controls:TextBoxHelper.Watermark="Last Name*"
+                     Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                      Margin="0 20 0 0" Height="30" 
+                     MaxLength="20"
                      VerticalContentAlignment="Center"
                      Controls:TextBoxHelper.ClearTextButton="True"/>
-            <DatePicker Controls:TextBoxHelper.Watermark="Birthday"
-                     Text="{Binding Birthday, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+            <DatePicker Controls:TextBoxHelper.Watermark="Birthday*"
+                     Text="{Binding Birthday, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True}"
                      Margin="0 20 0 0" Height="30" 
                      VerticalContentAlignment="Center"/>
-            <ComboBox Controls:TextBoxHelper.Watermark="Position"
+            <ComboBox Controls:TextBoxHelper.Watermark="Position*"
                       DisplayMemberPath="Name"
                       ItemsSource="{Binding Positions}"
-                      SelectedValue="{Binding Position, UpdateSourceTrigger=PropertyChanged}"
+                      SelectedValue="{Binding Position, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                       Margin="0 20 0 0" Height="30" 
                       VerticalContentAlignment="Center"/>
-            <PasswordBox Controls:TextBoxHelper.Watermark="Password" 
+            <PasswordBox Controls:TextBoxHelper.Watermark="Password*" 
                          Margin="0 20 0 0"
+                         MaxLength="32"
                          VerticalContentAlignment="Center"
                          Controls:TextBoxHelper.ClearTextButton="True">
                 <i:Interaction.Behaviors>
-                    <Behaviors:PasswordBehavior Password="{Binding Password, Mode=TwoWay}" />
+                    <Behaviors:PasswordBehavior Password="{Binding Password, Mode=TwoWay, ValidatesOnDataErrors=True}" />
                 </i:Interaction.Behaviors>
             </PasswordBox>
-            <PasswordBox Controls:TextBoxHelper.Watermark="Confirm Password" 
+            <PasswordBox Controls:TextBoxHelper.Watermark="Confirm Password*" 
                          Margin="0 20 0 0"
+                         MaxLength="32"
                          VerticalContentAlignment="Center"
                          Controls:TextBoxHelper.ClearTextButton="True">
                 <i:Interaction.Behaviors>
-                    <Behaviors:PasswordBehavior Password="{Binding ConfirmPassword, Mode=TwoWay}" />
+                    <Behaviors:PasswordBehavior Password="{Binding ConfirmPassword, Mode=TwoWay, ValidatesOnDataErrors=True}" />
                 </i:Interaction.Behaviors>
             </PasswordBox>
             <Button Content="Register"
