--- a/ITManager/ITManager/Views/LoginView.xaml
+++ b/ITManager/ITManager/Views/LoginView.xaml
@@ -34,6 +34,11 @@
                     <Behaviors:PasswordBehavior Password="{Binding Password, Mode=TwoWay}" />
                 </i:Interaction.Behaviors>
             </PasswordBox>
+            <TextBlock TextWrapping="Wrap"
+                       Margin="0 10 0 0"
+                       Visibility="{Binding ErrorsVisibility}"
+                       Text="{Binding Errors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                       Foreground="#FFFB6363"/>
             <Button Content="Log in"
                     Command="{Binding LoginCommand}"
                     Style="{StaticResource DefaultButtonStyle}"/>
