--- a/ITManager/ITManager/Views/RegisterView.xaml
+++ b/ITManager/ITManager/Views/RegisterView.xaml
@@ -48,7 +48,7 @@
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="300"/>
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
 
@@ -102,6 +102,12 @@
                     <Behaviors:PasswordBehavior Password="{Binding ConfirmPassword, Mode=TwoWay, ValidatesOnDataErrors=True}" />
                 </i:Interaction.Behaviors>
             </PasswordBox>
+
+            <TextBlock TextWrapping="Wrap"
+                       Margin="0 10 0 0"
+                       Visibility="{Binding ErrorsVisibility}"
+                       Text="{Binding Errors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                       Foreground="#FFFB6363"/>
             <Button Content="Register"
                     Command="{Binding RegisterCommand}"
                     Style="{StaticResource DefaultButtonStyle}"/>
