--- a/ITManager/ITManager/Views/AccountsManagementView.xaml
+++ b/ITManager/ITManager/Views/AccountsManagementView.xaml
@@ -10,6 +10,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="Auto"/>
@@ -130,37 +135,45 @@
                         </Style>
                     </StackPanel.Style>
                     <TextBox Controls:TextBoxHelper.Watermark="Login"
-                             Text="{Binding Login, UpdateSourceTrigger=PropertyChanged}"
+                             Text="{Binding Login, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                              Margin="0 20 0 0" Height="30" 
+                             MaxLength="20"
                              VerticalContentAlignment="Center"
                              Controls:TextBoxHelper.ClearTextButton="True"/>
                     <TextBox Controls:TextBoxHelper.Watermark="First Name"
-                             Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged}"
+                             Text="{Binding FirstName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                              Margin="0 20 0 0" Height="30" 
+                             MaxLength="20"
                              VerticalContentAlignment="Center"
                              Controls:TextBoxHelper.ClearTextButton="True"/>
                     <TextBox Controls:TextBoxHelper.Watermark="Last Name"
-                             Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged}"
+                             Text="{Binding LastName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                              Margin="0 20 0 0" Height="30" 
+                             MaxLength="20"
                              VerticalContentAlignment="Center"
                              Controls:TextBoxHelper.ClearTextButton="True"/>
 
                     <ComboBox Controls:TextBoxHelper.Watermark="Position"
                               DisplayMemberPath="Name"
                               ItemsSource="{Binding Roles}"
-                              SelectedItem="{Binding Role}"
+                              SelectedItem="{Binding Role, ValidatesOnDataErrors=True}"
                               Margin="0 20 0 0" Height="30" 
                               VerticalContentAlignment="Center"/>
                     <DatePicker Controls:TextBoxHelper.Watermark="Birthday"
-                                 Text="{Binding Birthday, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                                 Text="{Binding Birthday, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True}"
                                  Margin="0 20 0 0" Height="30" 
                                  VerticalContentAlignment="Center"/>
                     <ComboBox Controls:TextBoxHelper.Watermark="Position"
                               DisplayMemberPath="Name"
                               ItemsSource="{Binding Positions}"
-                              SelectedValue="{Binding Position, UpdateSourceTrigger=PropertyChanged}"
+                              SelectedValue="{Binding Position, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                               Margin="0 20 0 0" Height="30" 
                               VerticalContentAlignment="Center"/>
+                    <TextBlock TextWrapping="Wrap"
+                       Margin="0 10 0 0"
+                       Visibility="{Binding ErrorsVisibility}"
+                       Text="{Binding Errors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                       Foreground="#FFFB6363"/>
                     <Button Content="Register"
                             Margin="0 20 0 10"
                             Width="200"
