--- a/ITManager/ITManager/Views/SkillsManagementView.xaml
+++ b/ITManager/ITManager/Views/SkillsManagementView.xaml
@@ -4,11 +4,17 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:c="clr-namespace:ITManager.Converters"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition />
@@ -41,19 +47,28 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <StackPanel Grid.Row="2" Margin="20"
-                    Height="30"
-                    Orientation="Horizontal">
-            <TextBox Name="SkillTextBox" 
-                     Width="300"
-                     Height="30"/>
-            <Button Content="Add new skill"
+        <StackPanel Grid.Row="2" Margin="20">
+            <StackPanel Height="30"
+                        Orientation="Horizontal">
+                <TextBox Name="SkillTextBox" 
+                         Text="{Binding SkillName, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                         Width="300"
+                         MaxLength="50"
+                         Height="30"/>
+                <Button Content="Add new skill"
                     Width="150"
                     Margin="20 0 0 0"
                     Style="{StaticResource DefaultButtonStyle}"
                     Command="{Binding AddSkill}" 
                     CommandParameter="{Binding Text, ElementName=SkillTextBox}"/>
+            </StackPanel>
+            <TextBlock TextWrapping="Wrap"
+                       Margin="0 10 0 0"
+                       Visibility="{Binding ErrorsVisibility}"
+                       Text="{Binding Errors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                       Foreground="#FFFB6363"/>
         </StackPanel>
+        
         <StackPanel Grid.Row="3" Margin="20 0 0 40" Orientation="Horizontal">
             <Button Content="Reset skills"  Width="150"
                     Command="{Binding ResetSkills}"
