--- a/ITManager/ITManager/Views/ChangePasswordView.xaml
+++ b/ITManager/ITManager/Views/ChangePasswordView.xaml
@@ -11,6 +11,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Loaded">
+                <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="250"/>
@@ -50,6 +55,11 @@
                     <Behaviors:PasswordBehavior Password="{Binding ConfirmNewPassword, Mode=TwoWay}" />
                 </i:Interaction.Behaviors>
             </PasswordBox>
+            <TextBlock TextWrapping="Wrap"
+                       Margin="0 10 0 0"
+                       Visibility="{Binding ErrorsVisibility}"
+                       Text="{Binding Errors, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                       Foreground="#FFFB6363"/>
             <Button Content="Change" 
                     Command="{Binding ChangePassword}"
                     Style="{StaticResource DefaultButtonStyle}"/>
